@@ -1,3 +1,13 @@
+2012-08-16  Corinna Vinschen  <corinna@vinschen.de>
+
+	* cygcheck.cc: Change include path to not depend on installed
+	cygwin/version.h.
+	(_NOMNTENT_MACROS): Define before including mntent.h.
+	* path.cc (_NOMNTENT_MACROS): Ditto.
+	* dump_setup.cc: Add temporary workaround to handle older Mingw header
+	files on Fedora 17.
+	* strace.cc: Ditto.
+
 2012-08-13  Corinna Vinschen  <corinna@vinschen.de>
 
 	* ps.cc (main): Drop unneeded cast.
